--- a/ERP Love-Gid/Views/Home/EditPaymentDetail.cshtml
+++ b/ERP Love-Gid/Views/Home/EditPaymentDetail.cshtml
@@ -51,6 +51,10 @@
 
 
                         </tr>
+                        <tr id="hideMe">
+                            <td><p>В компанию:</p></td>
+                            <td><p> @Html.TextBox("SumToOptyonallyUsing", null, new { @class = "form-control", type = "number", @min = "0" })</p></td>
+                        </tr>
                         <tr>
                             <td><p>Для кого оплата: </p></td>
                             <td><p> @Html.DropDownList("Employee", (IEnumerable<SelectListItem>)ViewData["Employees"], null, new { style = "width : 200px", @class = "form-control" }) @Html.ValidationMessage("Employees")</p></td>
@@ -102,3 +106,28 @@
 
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script>
+    $(function () {
+        var type = ($('#Event option:selected').text());
+
+        if (type == "Договор Прочее") { $("#hideMe").show(); }
+        else {
+
+            $("#hideMe").hide();
+        }
+    });
+</script>
+<script>
+    $('#Event').on('change', function () {
+
+        var type = ($('#Event option:selected').text());
+
+        if (type == "Договор Прочее") { $("#hideMe").show(); }
+        else {
+
+            $("#hideMe").hide();
+        }
+    });
+</script>
