--- a/ERP Love-Gid/Views/Shared/_LayoutAdmin.cshtml
+++ b/ERP Love-Gid/Views/Shared/_LayoutAdmin.cshtml
@@ -34,7 +34,7 @@
 
 
                 @Html.ActionLink("Выйти", "Exit", "Admin", new { @class = "navbar-brand" })
-                <text class="navbar-brand"><strong>@ViewBag.User</strong> </text>
+                @*<text class="navbar-brand"><strong>@ViewBag.User</strong> </text>*@
 
 
             </div>
